# small-text

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE-THIRDPARTY  MANIFEST.in  MIGRATION_GUIDE.md  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
active_learning/: __init__.py  active_learner.py  version.json  version.py
active_learning/classifiers/: __init__.py  classification.py  factories.py
active_learning/data/: __init__.py  datasets.py
active_learning/initialization/: __init__.py  strategies.py
active_learning/integrations/: __init__.py
active_learning/query_strategies/: __init__.py  exceptions.py  strategies.py
active_learning/stopping_criteria/: kappa.py
active_learning/utils/: data.py  datetime.py
docs/: README.md  active_learning.rst  api.rst  bibliography.rst  classification.rst  classifiers.rst  conf.py  data_structures.rst  datasets.rst  errata.rst  index.rst  install.rst  reproducibility_notes.rst  requirements.txt  showcase.rst
docs/_templates/: layout.html
docs/api/: active_learner.rst  classifier.rst  data_set.rst  dataset.rst  vector_indexes.rst
docs/components/: initialization.rst  query_strategies.rst  stopping_criteria.rst  (+1 more)
examples/: binary_classification.py  pytorch_multiclass_classification.py  requirements.txt  transformers_multiclass_classification.py
small_text/: __init__.py  active_learner.py  base.py  exceptions.py  version.json  version.py
tests/: conftest.py
(+277 files in other folders)
